--- a/arsenal/as.data.frame.modelsum.Rmd
+++ b/arsenal/as.data.frame.modelsum.Rmd
@@ -1,4 +1,13 @@
-as.data.frame.modelsum
+---
+title: "``Arsenal::as.data.frame.modelsum``"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+
 
 #### Description
 
@@ -14,18 +23,11 @@ list.ok = FALSE)
 </code></pre>
 #### Arguments
 
-x A modelsum object.
-... 
-</code></pre>
-#### Arguments
- to pass to modelsum.control.
-labelTranslations
-A named list (or vector) where the name is the label in the output to be replaced
-in the pretty rendering by the character string value for the named element of
-the list, e.g., list(age = "Age(Years)", meansd = "Mean(SD)").
-list.ok
-If the object has multiple by-variables, is it okay to return a list of data.frames
-instead of a single data.frame? If FALSE but there are multiple by-variables, a
+* ``x``: A modelsum object.
+* ``...``:  Arguments  to pass to modelsum.control.
+* ``labelTranslations`` : A named list (or vector) where the name is the label in the output to be replaced in the pretty rendering by the character string value for the named element of
+the list, e.g., ``list(age = "Age(Years)", meansd = "Mean(SD)")``.
+* ``list.ok``: if the object has multiple by-variables, is it okay to return a list of data.frames instead of a single data.frame? If FALSE but there are multiple by-variables, a
 warning is issued.
 
 #### Value
@@ -33,6 +35,7 @@ warning is issued.
 A data.frame.
 Author(s)
 Ethan Heinzen, based on code originally by Greg Dougherty
-See Also
+
+#### See Also
 modelsum, summary.modelsumas.data.frame.tableby
-7
+
