--- a/bigdatadistances/levelsetdist.Rmd
+++ b/bigdatadistances/levelsetdist.Rmd
@@ -1,5 +1,13 @@
+---
+title: "``bigdatadist::levelsetdist``"
+output: html_document
+---
 
-levelsetdist
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(bigdatadist)
+```
+
 Level Set Distances
 
 
@@ -8,30 +16,35 @@ Level Set Distances
 
 This function allows you to compute the alpha level set distances as proposed in Martos et al.
 Nomparametric distances for probability measures with applications, 2018 (submitted).
-Usage
+
+#### Usage
+<pre><code>
 levelsetdist(A,B,n.level=10,k.neighbor=10)
+</code></pre>
 
 #### Arguments 
-* A data set in a matrix where variables are in columns and observations are in rows.
-* B data set in a matrix where variables are in columns and observations are in rows.
-* n.level the number of level sets to consider for distance computation.
-* k.neighbor number of neighbour points to consider in the estimation of the support of the distribution on each class.
+* ``A``: data set in a matrix where variables are in columns and observations are in rows.
+* ``B``: data set in a matrix where variables are in columns and observations are in rows.
+* ``n.level``: the number of level sets to consider for distance computation.
+* ``k.neighbor``: number of neighbour points to consider in the estimation of the support of the distribution on each class.
 
-##### Details
-The function computes the alpha level set distance between two (samples from) different probability measures. Details about the distance and the criterion to fix its hyperparameter can be found in Martos et al (2018, submitted).
-
-#### Value
-* distance: distance estimation between the two data sets or distributions.
-
-##### References
-Martos, G. et al (2018): Nomparametric distances for probability measures with applications in classification. J. of Calssification, 2018 (submitted).
 
 #### Examples 
 ```{r}
 require(MASS);
 set.seed(1)
 A = mvrnorm(100,c(0,0),diag(2));
-levelsetdist(A, B)
-merval
+
 B = mvrnorm(150,c(1,1),diag(2));
+
+levelsetdist(A, B)
 ```
+
+##### Details
+The function computes the alpha level set distance between two (samples from) different probability measures. Details about the distance and the criterion to fix its hyperparameter can be found in Martos et al (2018, submitted).
+
+#### Value
+* ``distance``: distance estimation between the two data sets or distributions.
+
+##### References
+Martos, G. et al (2018): Nomparametric distances for probability measures with applications in classification. J. of Calssification, 2018 (submitted).
