--- a/bigdatadistances/merval.Rmd
+++ b/bigdatadistances/merval.Rmd
@@ -1,3 +1,12 @@
+---
+title: "``bigdatadist::merval``"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(bigdatadist)
+```
 
 Merval Index
 
