--- a/bigdatadistances/rkhs.Rmd
+++ b/bigdatadistances/rkhs.Rmd
@@ -1,4 +1,13 @@
-## rkhs : RKHS Representation
+---
+title: "``bigdatadist::rkhs``"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(bigdatadist)
+```
+## RKHS Representation
 
 #### Description 
 
