--- a/arsenal/internal_tableby_functions.Rmd
+++ b/arsenal/internal_tableby_functions.Rmd
@@ -1,3 +1,13 @@
+---
+title: "``arsenal::``"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(arsenal)
+```
+
 Internal tableby functions
 
 #### Description
