--- a/arsenal/mockstudy.Rmd
+++ b/arsenal/mockstudy.Rmd
@@ -1,5 +1,14 @@
+---
+title: "``arsenal::mockstudy``"
+output: html_document
+---
 
-mockstudy
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(arsenal)
+```
+
+
 
 Mock study data for examples
 
@@ -33,6 +42,7 @@ case a numeric identifier-patient ID
 60-69 < 70-79 < 80-89
 
 #### Examples
-
+```{r}
 data(mockstudy)
 str(mockstudy)
+```
