--- a/gdata/case.Rmd
+++ b/gdata/case.Rmd
@@ -1,4 +1,13 @@
-case
+---
+title: "``gdata::case```"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(gdata)
+```
+
 Map elements of a vector according to the provided ’cases’
 
 #### Description
@@ -14,12 +23,18 @@ case(x, ..., default = NA)
 </code></pre>
 #### Arguments
 
-x Vector to be converted
-... Map of alternatives, specified as "name"=value
-default value
- to be assigned to elements of x not matching any of the alternatives. De-
-faults to NA.
+* x Vector to be converted
+* ... Map of alternatives, specified as "name"=value default value to be assigned to elements of x not matching any of the alternatives. Defaults to NA.
 
+
+#### Examples
+```{r}
+
+## default = NA
+case( c(1,1,4,3), "a"=1, "b"=2, "c"=3)
+## default = "foo"
+case( c(1,1,4,3), "a"=1, "b"=2, "c"=3, default="foo" )
+````
 #### Details
 
 This function is to switch what ifelse is to if, and is a convenience wrapper for factor.
@@ -32,15 +47,6 @@ Author(s)
 Gregory R. Warnes <greg@warnes.net>
 See Also
 factor, switch, ifelse
-
-#### Examples
-```{r}
-
-## default = NA
-case( c(1,1,4,3), "a"=1, "b"=2, "c"=3)
-## default = "foo"
-case( c(1,1,4,3), "a"=1, "b"=2, "c"=3, default="foo" )
-````
 
 
 
