--- a/gdata/env.Rmd
+++ b/gdata/env.Rmd
@@ -1,3 +1,14 @@
+
+---
+title: "``gdata::env``"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(gdata)
+```
+
 env
 Describe All Loaded Environments
 
@@ -13,8 +24,8 @@ env(unit="KB", digits=0)
 </code></pre>
 #### Arguments
 
-unit unit for displaying environment size: "bytes", "KB", "MB", or first letter.
-digits number of decimals to display when rounding environment size.
+* unit unit for displaying environment size: "bytes", "KB", "MB", or first letter.
+* digits number of decimals to display when rounding environment size.
 
 #### Value
 
