--- a/arsenal/paired.control.Rmd
+++ b/arsenal/paired.control.Rmd
@@ -1,4 +1,15 @@
-paired.control
+
+---
+title: "``arsenal::paired.control``"
+2output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(arsenal)
+```
+
+
 
 Control settings for paired function
 
